3.2/mule-user-guide/configuring-mule-stacktraces.adoc
= Configuring Mule Stacktraces

By default Mule will filter out some internal class references from stacktraces to produce a more readable output. This behavior can be controlled one of two ways:

== Command-Line Arguments

Two command-line properties enable you to control this behavior using `-M-DpropertyName`:

* `mule.stacktrace.full` - when present, Mule will not filter stacktraces. Intended for Mule developers only, end user would probably never need to enable this.
* `mule.stacktrace.filter` - a comma-separated list of packages and/or classes to remove from the stacktraces (matched via `string.startsWith() )`

== Using JMX

The Configuration MBean now exposes two new options.

* FullStackTrace - same as above
* StackTraceFilter - same as above

Note that these settings are shared between apps even though each app has its own Configuration MBean. That means that modifying it in one app will affect others.
